fixed chart width on small screen

--- a/D3-Challenge/assets/css/style.css
+++ b/D3-Challenge/assets/css/style.css
@@ -4,7 +4,7 @@ html {
   background-size: cover;
 }
 .iframeContainer {
-  padding: 20px;
+  /* padding: 20px; */
   border: 1px solid #e3e3e3;
 }
 
@@ -17,10 +17,12 @@ html {
 body {
   /* Padding bottom by footer height */
   opacity: 100%;
-  padding-bottom: 80px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 20px;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
   margin-top: 3%;
   background-color: #e0e1e2;
 }
@@ -68,7 +70,7 @@ h1 {
 .chart::before {
   position: absolute;
   top: 20px;
-  left: 300px;
+  /* left: 300px; */
   z-index: -1;
   display: block;
   width: 400px;
